Ajustado demais cores conforme psd do layout

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 				Logomarca
 			</div>
 			<ul class="menu-topo">
-				<li>Home</li>
-				<li>Sobre</li>
-				<li>Noticias</li>
-				<li>Produtos</ li>
-				<li>Contato</li>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Sobre</a></li>
+				<li><a href="#">Noticias</a></li>
+				<li><a href="#">Produtos</a></ li>
+				<li><a href="#">Contato</a></li>
 			</ul>
 		</div>
 	</div>
